--- a/src/main/resources/config/application-agent.yml
+++ b/src/main/resources/config/application-agent.yml
@@ -18,7 +18,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
      # 使用druid连接池
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://gz-cdb-9ejqau7b.sql.tencentcdb.com:61279/up_mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://gz-cdb-9ejqau7b.sql.tencentcdb.com:61279/up_mall_agent?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: adminfeng5148@
     druid:
@@ -54,7 +54,6 @@ upmall:
      - name: draw
        templateId: m38RGiDBNVl0BMz_I-fkm0ovAxB_2VFljssGxsCSMG8
 
-
 #接口链接
 requrl:
-   ORDER_AGENT: http://upmall-beta.cntracechain.com/order_agent/order/syncOrderAgent
+  ORDER_AGENT: http://xxx.com/order_agent/order/syncOrderAgent
