--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
     </dependencies>
 
     <build>
-        <finalName>up-mall-order</finalName>
+        <finalName>order_agent</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
